--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@
   height: 200px;
   border: 1px solid black;
 }
+.main {
+ padding:2rem;
+}
+
+.container {
+  width:80%;
+  max-width:1000px;
+  margin:0 auto;
+}
 #character {
   width: 20px;
   height: 50px;
